--- a/src/html/01_test.html
+++ b/src/html/01_test.html
@@ -1,15 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="./css/markup_project.css" />
+    <title>Project</title>
+  </head>
 
-<head>
-  <link rel="stylesheet" href="./css/clayon.css" />
-  <title>clayon</title>
-
-</head>
-
-<body>
-  <h1>Test Page #1</h1>
-  space sprite image: <span class="sp sp_space" style="border:1px solid #000">space</span>
-</body>
-
+  <body>
+    <h1>Test Page #1</h1>
+    space sprite image: <span class="spp spp_space" style="border:1px solid #000">space</span>
+    <div class="sps sps_btn-navi-back-b" style="border:1px solid #000"></div>
+    <div class="sps sps_btn-navi-cancel-b" style="border:1px solid #000"></div>
+    <div class="sps sps_btn-navi-setting-b" style="border:1px solid #000"></div>
+    <div class="sps sps_guide_page_repeat" style="border:1px solid #000"></div>
+    <img src="./img/uit_b.png" />
+  </body>
 </html>
