--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,69 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>MarkupProject</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        line-height: 1.6;
+      }
 
-<head>
-  <title>MarkupProject</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-    }
+      body {
+        font-family: sans-serif;
+        font-size: 15px;
+      }
 
-    body {
-      font-family: sans-serif;
-      font-size: 15px;
-    }
+      h1 {
+        padding: 10px;
+        color: #666;
+        font-size: 15px;
+        text-transform: uppercase;
+      }
 
-    h1 {
-      padding: 10px;
-      color: #666;
-      font-size: 15px;
-      text-transform: uppercase;
-    }
+      .section {
+      }
 
-    .section {}
+      .section h2 {
+        border-top: 1px solid #eee;
+        padding: 10px;
+        color: #b886de;
+        font-size: 14px;
+      }
 
-    .section h2 {
-      border-top: 1px solid #eee;
-      padding: 10px;
-      color: #b886de;
-      font-size: 14px;
-    }
+      .section ul {
+        overflow: hidden;
+        border-top: 1px solid #f1f1f1;
+        padding-bottom: 10px;
+      }
 
-    .section ul {
-      overflow: hidden;
-      border-top: 1px solid #f1f1f1;
-      padding-bottom: 10px;
-    }
+      .section li {
+        float: left;
+        width: 25%;
+        list-style-type: none;
+      }
 
-    .section li {
-      float: left;
-      width: 25%;
-      list-style-type: none;
-    }
-
-    .section li a {
-      display: block;
-      overflow: hidden;
-      padding: 10px;
-      text-overflow: ellipsis;
-      color: #333;
-      font-size: 12px;
-      text-decoration: none;
-    }
-  </style>
-</head>
-
-<body>
-  <h1>Service Name</h1>
-  <div class="section">
-    <h2>Page Classification</h2>
-    <ul>
-      <li><a href="01_test.html">Test Page #1</a></li>
-    </ul>
-  </div>
-
-</body>
-
+      .section li a {
+        display: block;
+        overflow: hidden;
+        padding: 10px;
+        text-overflow: ellipsis;
+        color: #333;
+        font-size: 12px;
+        text-decoration: none;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Service Name</h1>
+    <div class="section">
+      <h2>Page Classification</h2>
+      <ul>
+        <li><a href="01_test.html">Test Page #1</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
